force-app/main/default/objects/Approval_Integration_Setting__mdt/Approval_Integration_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Approval Integration Setting</label>
    <pluralLabel>Approval Integration Settings</pluralLabel>
    <description>Feature switch and thresholds for the corporate (on-prem) approval system integration. The single record named "Default" is read by ApprovalIntegrationSettings; enabling the checkbox reroutes submissions to the external system and makes the in-app approval console read-only.</description>
</CustomObject>