force-app/main/default/objects/Approval_Integration_Setting__mdt/fields/External_Approval_Enabled__c.field-meta.xml
<CustomField>
    <fullName>External_Approval_Enabled__c</fullName>
    <label>External Approval Enabled</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>When true, submissions publish Approval_Request__e events for the corporate approval system instead of notifying Account Owners in Salesforce, and the approval console becomes read-only.</description>
</CustomField>