force-app/main/default/objects/Approval_Integration_Setting__mdt/fields/Fail_After_Hours__c.field-meta.xml
<CustomField>
    <fullName>Fail_After_Hours__c</fullName>
    <label>Fail After (Hours)</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <description>Reconciliation batch marks Integration Status = Sync Failed (manual follow-up) when a request has waited this long. Default 72 when blank.</description>
</CustomField>