force-app/main/default/objects/Approval_Integration_Setting__mdt/fields/Resend_After_Hours__c.field-meta.xml
<CustomField>
    <fullName>Resend_After_Hours__c</fullName>
    <label>Resend After (Hours)</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <description>Reconciliation batch republishes an approval request (Action = RESEND) when it has waited this long without a decision. Default 24 when blank.</description>
</CustomField>